# nand_to_tetris

./: .gitignore  README.md
assembler/: Code.py  Command.py  Parser.py  README.md  SymbolTable.py  main.py  pyproject.toml
assembler/src/: asm_encode.py  bit_classes.py  command_type.py  main.py  parser.py  predefined_symbols.py  symbol_table.py
assembler/test/: test_Code.py  test_main.py
assembler/test/inputs/: Add.txt  plain_1.txt  plain_1_binary.txt
assembler/tests/mid/: Max.txt  Rect.txt
jack_game/Square/: Obstacle.jack  Square.vm  SquareGame.jack  SquareGame.vm
vm_translator/: Makefile  pyproject.toml
vm_translator/src/: code_writer.py  parser.py  vm_translator.py
vm_translator/src/commands/: __init__.py  arithmetic.py  arithmetic_command_type.py  command_kind.py  function_call.py  function_call_command_type.py  memory_access.py  memory_access_command_type.py  predefined_symbols.py  program_flow.py  program_flow_command_type.py
vm_translator/src/vm_translator/: code_writer.py  parser.py  segment.py  vm_command_type.py
vm_translator/tests/: conftest.py  test_code_writer.py  test_parser.py
vm_translator/tests/sample_files/: BasicLoop.asm  BasicTest.asm  Fibonacci.asm  FibonacciElement.asm  FibonacciSeries.asm  PointerTest.asm  PointerTest.vm  SimpleAdd.asm  SimpleAdd.vm  SimpleFunction.asm  StackTest.asm  StaticTest.asm  StaticsTest.asm  script.sh
