[project]
name = "vm-translator"
version = "0.1.0"
description = "VM translator implementation in Python according to the Book Nand to Tetris"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.ruff]
target-version = "py312"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

